--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@
 	padding-top: 24px;
 	background-color: #ffff;
 	overflow: hidden;
+	position: relative;
 	/* border: 1px solid #000; */
 }
 
@@ -248,6 +249,14 @@
 /* Manual pages */
 
 .main-manual {
+	width: 360px;
+	margin: 0 auto;
+	padding-top: 24px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
+	
 	background-color: #000;
 	color: #ffff;
 	text-align: center;
