--- a/css/main.css
+++ b/css/main.css
@@ -6,20 +6,25 @@
 	text-decoration: none;
 }
 
+body {
+	background-color: #f1e8e87e;
+}
+
 .main {
-	width: 360px;
+	max-width: 960px;
+	min-width: 360px;
+	min-height: 800px;
 	margin: 0 auto;
 	padding-top: 24px;
 	background-color: #ffff;
 	overflow: hidden;
 	position: relative;
-	/* border: 1px solid #000; */
 }
 
 .main__title {
 	width: 289px;
 	margin-bottom: 20px;
-	margin-left: 36px;
+	margin-left: calc(50% - 144.5px);
 
 	font-size: 20px;
 	font-weight: 700;
@@ -39,7 +44,7 @@
 	margin-left: calc(50% - 55.5px);
 	margin-bottom: 19px;
 
-	cursor: pointer;
+	/* cursor: pointer; */
 	border-radius: 19px;
 	-webkit-border-radius: 19px;
 	-moz-border-radius: 19px;
@@ -125,12 +130,13 @@
 }
 
 .card-block {
-	width: 335px;
+	width: 90%;
 	margin: 0 auto;
 	margin-bottom: 20px;
 
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
+	gap: 10%;
 }
 
 .card-block__item {
@@ -184,7 +190,8 @@
 }
 
 .about__title {
-	margin-left: 12px;
+	width: 200px;
+	margin-left: calc(50% - 100px);
 	margin-bottom: 4px;
 
 	font-size: 15px;
@@ -193,8 +200,8 @@
 }
 
 .about__text {
-	width: 291px;
-	margin-left: 12px;
+	width: 290px;
+	margin-left: calc(50% - 144.5px);
 	margin-bottom: 20px;
 
 	font-size: 12px;
@@ -249,12 +256,11 @@
 /* Manual pages */
 
 .main-manual {
-	width: 360px;
-	margin: 0 auto;
-	padding-top: 24px;
 	position: absolute;
 	top: 0;
 	left: 0;
+	right: 0;
+	bottom: 0;
 	display: none;
 	
 	background-color: #000;
@@ -266,6 +272,7 @@
 	font-size: 24px;
 	font-weight: 900;
 	margin-bottom: 12px;
+	text-transform: uppercase;
 }
 
 .manual__title-small {
@@ -273,7 +280,8 @@
 }
 
 .instruction {
-	width: 328px;
+	width: 90%;
+	min-width: 328px;
 	height: 100px;
 	margin: 0 auto;
 	margin-bottom: 12px;
@@ -296,16 +304,17 @@
 }
 
 .manual__block {
+	width: 85%;
 	margin: 0 auto;
 	margin-bottom: 12px;
 
 	display: flex;
 	justify-content: center;
-	gap: 16px;
+	gap: 15%;
 }
 
 .manual__block-small {
-	gap: 13px;
+	gap: 16%;
 	margin-bottom: 19px;
 }
 
@@ -322,6 +331,15 @@
 	-o-border-radius: 8px;
 }
 
+
+.manual__item > img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+	filter: blur(5px) sepia(90%);
+	-webkit-filter: blur(5px) sepia(90%);
+}
+
 .manual__item-small {
 	width: 75px;
 	height: 131px;
@@ -334,18 +352,18 @@
 }
 
 .step-one {
-	animation: visibilityAppearance 3s;
-	-webkit-animation: visibilityAppearance 3s;
-}
-
-.step-two {
 	animation: visibilityAppearance 6s;
 	-webkit-animation: visibilityAppearance 6s;
 }
 
-.step-three {
+.step-two {
 	animation: visibilityAppearance 9s;
 	-webkit-animation: visibilityAppearance 9s;
+}
+
+.step-three {
+	animation: visibilityAppearance 12s;
+	-webkit-animation: visibilityAppearance 12s;
 }
 
 @keyframes visibilityAppearance {
